--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,10 +15,7 @@
           <a class="nav-link" href="{{"/about" | relative_url }}">Authors</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{"/videos" | relative_url }}">Videos</a>
+          <a class="nav-link" href="{{"/videos" | relative_url }}">Resources</a>
         </li>
       </ul>
     </div>
